--- a/quiz/templates/user_progress.html
+++ b/quiz/templates/user_progress.html
@@ -1,5 +1,6 @@
-{% extends 'master.html' %} {% block title %}My Progress{% endblock %} {% block
-content %}
+{% extends 'master.html' %} 
+{% block title %}My Progress{% endblock %} 
+{% block content %}
 <h1 class="mb-4">My Progress</h1>
 
 <div class="card mb-4">
