--- a/quiz/templates/master.html
+++ b/quiz/templates/master.html
@@ -22,13 +22,39 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav me-auto">
             <li class="nav-item">
               <a class="nav-link" href="{% url 'quiz_list' %}">Quizzes</a>
             </li>
-
           </ul>
-          
+          <ul class="navbar-nav">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <form
+                method="post"
+                action="{% url 'logout' %}"
+                class="nav-link"
+                style="margin: 0; padding: 0"
+              >
+                {% csrf_token %}
+                <button
+                  type="submit"
+                  class="btn nav-link"
+                  style="background: none; border: none"
+                >
+                  Logout
+                </button>
+              </form>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'register' %}">Register</a>
+            </li>
+            {% endif %}
+          </ul>
         </div>
       </div>
     </nav>
