--- a/quiz/templates/master.html
+++ b/quiz/templates/master.html
@@ -26,6 +26,11 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'quiz_list' %}">Quizzes</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'summarize_text' %}"
+                >Text Summarizer</a
+              >
+            </li>
           </ul>
           <ul class="navbar-nav">
             {% if user.is_authenticated %}
